[gd_scene load_steps=11 format=1]

[ext_resource path="res://door-scene/script/main.gd" type="Script" id=1]
[ext_resource path="res://door-scene/controls.tscn" type="PackedScene" id=2]
[ext_resource path="res://door-scene/script/door.gd" type="Script" id=3]
[ext_resource path="res://door-scene/models/door.msh" type="Mesh" id=4]
[ext_resource path="res://door-scene/skybox/sky.cube" type="CubeMap" id=5]
[ext_resource path="res://door-scene/floor.tscn" type="PackedScene" id=6]
[ext_resource path="res://door-scene/script/pdplayer.gd" type="Script" id=7]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.717981, 1.14566, 0.148466 )

[sub_resource type="FixedMaterial" id=2]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = -1.41999e+26
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="Environment" id=3]

ambient_light/enabled = true
ambient_light/color = Color( 1, 1, 1, 1 )
ambient_light/energy = 0.37
fxaa/enabled = false
background/mode = 4
background/color = Color( 0, 0, 0, 1 )
background/cubemap = ExtResource( 5 )
background/energy = 1.0
background/scale = 1.153
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[node name="world" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="controls" parent="." instance=ExtResource( 2 )]

editor/display_folded = true

[node name="door" type="RigidBody" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.546741, 1.08579, -0.107921 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock = 0
velocity/linear = Vector3( 0, 0, 0 )
velocity/angular = Vector3( 0, 0, 0 )
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="door"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.546741, 1.08579, -0.107921 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="MeshInstance" type="MeshInstance" parent="door"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 2 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 4 )
mesh/skeleton = NodePath("..")
material/0 = null
material/1 = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 3 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.959885, 0.280395, 0, -0.280395, 0.959885, -0.153964, 1.70196, 2.37883 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
target = NodePath("")
speed = 1.0
enabled = false

[node name="OmniLight" type="OmniLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200856, 2.33771, 2.60038 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.001
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
params/radius = 5.29409
params/attenuation = 1.0

[node name="floor" parent="." instance=ExtResource( 6 )]

[node name="PDPlayer" type="PDPlayer" parent="."]

script/script = ExtResource( 7 )

[connection signal="button_down" from="controls/Button" to="door" method="_on_Button_button_down"]

[connection signal="value_changed" from="controls/slider_mass" to="." method="_on_slider_mass_value_changed"]

[connection signal="value_changed" from="controls/slider_losses" to="." method="_on_slider_losses_value_changed"]

[connection signal="value_changed" from="controls/slider_spring" to="." method="_on_slider_spring_value_changed"]

[connection signal="toggled" from="controls/CheckButton" to="." method="_on_CheckButton_toggled"]

[connection signal="toggled" from="controls/CheckButton" to="door" method="_on_CheckButton_toggled"]


[editable path="controls"]
